docs:Update README.md

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="./assets/reset.css">
   <link rel="stylesheet" href="./assets/style.css">
-  <link rel="icon" href="./img/title.png" type="Image/png">
+  <link rel="icon" href="./assets/images/title.png" type="Image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Serif:opsz,wght@8..144,700&display=swap">
@@ -19,7 +19,7 @@
 <body>
   <div id="welcome-message" style="display:none;"></div>
   <header>
-    <img src="./img/logo.png" alt="Logo esboço de xícara" width="170" height="100">
+    <img src="./assets/images/logo.png" alt="Logo esboço de xícara" width="170" height="100">
 
     <h1>Rocket<span>Coffe</span></h1>
     <p>Aberto todos os dias: 8h - 21h</p>
